# copilot_automotive

./: .gitignore  Dockerfile  README.md  README_REALTIME.md  agent_driver_assist_ai.py  agent_video_suggestion_ai.py  aircontrol_agent.py  app.py  carnavigation_agent.py  config.py  controller_chrome.py  controller_youtube.py  controller_youtube_adskip.py  controller_youtube_autoplay.py  dummy_login.py  function_aircontrol.py  function_launch_navigation.py  function_play_video.py  function_seach_videos.py  function_weather.py  generate_qr_code.py  install_selenium_in_termux.sh  network_utils.py  openai_function_weather.py  page_video.py  pyproject.toml  realtime_api_utils.py  realtime_app.py  realtime_chat.py  realtime_driver_assist_ai.py  realtime_function_content_search.py  realtime_function_seach_videos.py  realtime_prompt.py  realtime_tools.py  realtime_utils.py  remote_chat.py  setup.sh  supervisor_adaptor.py  supervisor_agent.py  util_context_search.py  (+2 more)
doc/: ai4car_memo.md  demo_scenario.md  demo_setup.md  scenario_calender.md  scenario_memo  scenario_video.md  todo.md
docs/: realtime_app.md
dummy_data/: scenario_video.py  trailer_db.csv  trailer_db.py  user.py  vehicle_data.py
langchain_openai_voice/: __init__.py
samples/: agent_content_search.py  agent_test.py  sample.json  websearch.py
static/: dummy_login.html  qr_code.html  start.html
static/demo/: demo_template.html
