[project]
name = "copilot-automotive"
version = "0.1.0"
description = ""
authors = [{ name = "aRaiko.Funakami", email = "raiko.funakami@access-company.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.5.2,<3",
    "openai>=1.16.1,<2",
    "flask>=3.0.2,<4",
    "langid>=1.1.6,<2",
    "selenium>=4.19.0,<5",
    "webdriver-manager>=4.0.1,<5",
    "ppad>=0.0.11,<0.0.12",
    "pure-python-adb>=0.3.0.dev0,<0.4",
    "langchain-openai>=0.3.9,<0.4",
    "langchain-community>=0.3.8,<0.4",
    "langgraph>=0.2.53,<0.3",
    "starlette>=0.41.3,<0.42",
    "serverutils>=4.2.1,<5",
    "uvicorn>=0.32.1,<0.33",
    "websockets~=13.1",
    "qrcode~=8.0",
    "pillow>=11.1.0,<12",
    "pandas>=2.2.3,<3",
    "beautifulsoup4>=4.13.3,<5",
    "aioconsole>=0.8.1,<0.9",
    "tavily-python>=0.5.4,<0.6",
    "langgraph-prebuilt>=0.1.8,<0.2",
    "langgraph-supervisor>=0.0.4",
    "media-search-agent",
]

[tool.uv.sources]
media-search-agent = { path = "tmdb_agent", editable = true }

